# scapy-scion-int

./: .gitignore  README.md  fields.py  pyproject.toml  requirements.in  requirements.txt  scapy-scion  scapy_scion.py  scion_addr.py  util.py  utils.py
layers/: bfd.py  int.py  scion.py  scmp.py  telemetry.py
scapy_scion/: fields.py  utils.py
scapy_scion/layers/: bfd.py  id_int.py  idint.py  int.py  scion.py  scmp.py  telemetry.py
tests/: reference_pkts.pcap  reference_pkts_peering.pcap  test_idint.py  test_int.py  test_scion.py  test_scion_processing.py  test_telemetry.py
tools/: README.md  local_trace.py
tools/topo/: linear.yaml  peer.yaml
